2004-01-30  Dennis Smit  <ds@nerds-incorporated.org>
	* stickynotes_applet.h: add about_dialog entry to the 
	StickyNotesApplet structure
	
	* stickynotes_applet_callbacks.c (menu_about_cb): make use of
	the about box within the applet structure to avoid sharing
	between instances, also allow only one about dialog
	per instance.
	(applet_destroy_cb):
	destroy about box when it's present.
	
	* stickynotes_applet.c (stickynotes_applet_new):
	set about_dialog to NULL.

	Fixes #132465

2004-01-03  Fernando Her

	* GNOME_StickyNotesApplet.server.in.in: add buzilla info. Fixes 
	  bug #129214.

2003-12-11  Muktha <muktha.narayan@wipro.com>

	* stickynotes_applet.c: Add accessible name. Fixes bug #128259.

2003-12-07  Shakti <shakti.sen@wipro.com>

 	  Remove the applet from the list when it is deleted from panel.
 
 	* stickynotes/stickynotes_applet.c: stickynotes_applet_new ()
 	  'destroy' signal is connected to the applet.
 	* stickynotes/stickynotes_applet_callbacks.c: applet_destroy_cb ()
 	  Added the above function to remove the applet from the list when
           it is deleted from the panel.
 	* stickynotes/stickynotes_applet_callbacks.h
 	  Added declaration of applet_destroy_cb ().
 	  Fixes the bug #124094

2003-11-25  Muktha  <muktha.narayan@wipro.com>

	* stickynotes.c: Escape text to allow '&' in the title.
	  Fixes bug #122050.

2003-11-06  Breda McColgan  <Breda.McColgan@sun.com>

        * help/C/stickynotes_applet.xml: Updated for GNOME 2.4.2
        * help/C/stickynotes_applet-C.omf : Updated to reflect new manual version number and date
        * help/C/l10n.txt: Updated Summary of Changes section

Mon Sep 15 15:39:20 2003  George Lebl <jirka@5z.com>

	* stickynotes_applet.c: when started in lockdown mode, hide the
	  preferences item

2003-09-05  Christian Rose  <menthos@menthos.com>

	* stickynotes_applet_callbacks.c: Fix the two broken, recently
	added messages so that they match the spelling of already existing
	messages.
