@@ -16,7 +16,7 @@
 	    <oaf_attribute name="name" type="string" _value="Sticky Notes"/>
 	    <oaf_attribute name="description" type="string" _value="Create, view, and manage sticky notes on the desktop"/>
 	    <oaf_attribute name="panel:category" type="string" _value="Accessories"/>
-	    <oaf_attribute name="panel:icon" type="string" value="stickynotes/stickynotes.png"/>
+	    <oaf_attribute name="panel:icon" type="string" value="stock_notes"/>
 	    <oaf_attribute name="bugzilla:bugzilla" type="string" value="GNOME"/>
 	    <oaf_attribute name="bugzilla:product" type="string" value="gnome-applets"/>
 	    <oaf_attribute name="bugzilla:component" type="string" value="stickynotes"/>
