@@ -1,3 +1,12 @@
+2004-02-01  Dennis Smit  <ds@nerds-incorporated.org>
+	* stickynotes_applet.c:
+	* GNOME_StickyNotesApplet.server.in.in:
+
+	Added patch from SUN to make the stickynotes applet
+	use the icon theme for it's app icon.
+
+	Fixes #130642.
+
 2004-01-30  Dennis Smit  <ds@nerds-incorporated.org>
 	* stickynotes_applet.h: add about_dialog entry to the 
 	StickyNotesApplet structure
